# DiagramPche_DearImGui

./: CMakeLists.txt  README.MD  Run.cpp
App/: App.hpp  AppBoilerplate.cpp  AppStart.cpp  AppUpdate.cpp  Config.hpp  HelperFunction.hpp  Welcome.hpp
App/GUI/: Body.cpp  Canvas.cpp  CanvasDrawNode.cpp  CanvasDrawPath.cpp  MainMenuBar.cpp  Modal.cpp  TextEditor.cpp  TextEditorAlt.cpp  Toolbar.cpp  Widget.cpp  Widgetbench.cpp  Window.cpp
App/Helper/: BenchmarkCSV.hpp  CPU.hpp  Color.hpp  Draw.hpp  DrawLayer.hpp  GUICombo.hpp  GUILayout.hpp  HelperFunctions.hpp  NodeStruct.hpp  Operator.hpp  PathStruct.hpp  Print.hpp
App/Logic/: AppBenchmark.cpp  AppDialog.cpp  AppFile.cpp  AppSource.cpp  AppStyle.cpp  AppWidgetbench.cpp  Parser.cpp  Parser.hpp  ParserNode.cpp  ParserPath.cpp
App/Logic/SVG/: Exporter.cpp  Exporter.hpp
App/Logic/TOML/: Parser.cpp  Parser.hpp  ParserNode.cpp  ParserPath.cpp
App/Model/: CanvasNode.hpp  CanvasNodeStruct.hpp  Node.hpp  NodeStruct.hpp  NodeType.hpp  Path.hpp  PathStruct.hpp  Pathpoint.hpp  PathpointType.hpp  Pivot.hpp  PivotEnum.hpp  Point.hpp  PointRefTypeEnum.hpp  PointStruct.hpp
App/Module/: Body.cpp  Canvas.cpp  CanvasDrawNode.cpp  CanvasDrawPath.cpp  MainMenuBar.cpp  ModuleBody.cpp  ModuleCanvas.cpp  ModuleMain.cpp  ModuleMainMenuBar.cpp  ModuleTextEditor.cpp  TextEditor.cpp
Dependency/: svg.hpp
Dependency/ImGuiColorTextEdit/: CMakeLists.txt
Dependency/ImGuiColorTextEdit/ImGuiColorTextEdit-ca2f9f1/: NSOLD.cpp  PALETTE.cpp  TextEditor.cpp  TextEditor.h
Dependency/glad/: CMakeLists.txt
Dependency/glad/include/glad/: gl.h
Dependency/imgui/: CMakeLists.txt  UpdateHelper.ps1
Dependency/imgui/imgui-1.92.5/: imconfig.h
Dependency/imgui/imgui-1.92.5/misc/cpp/: imgui_stdlib.h
Dependency/imgui/imgui-1.92.6/: imconfig.h
Dependency/imgui/imgui-1.92.6/misc/cpp/: imgui_stdlib.h
Resource/Example/: Example1.toml  Example2.toml
Resource/Example/Debug/: Z-axis.toml
Resource/Scripts/: bench.ps1  bench.sh  bench2.ps1  bench2.sh
